src/objects/sma__MATerritoryRollupValue__c.object
<CustomObject>
    <fields>
        <fullName>sma__RecordCount__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Run</label>
        <referenceTo>sma__MATerritoryRollupRun__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>Rollup Values</relationshipLabel>
        <relationshipName>RollupValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Value__c</fullName>
        <description>This is a long text area to allow for additional capabilities in the future.  The current use case for a rollup value is to store a number (count, sum, min, max), but this could be expanded.  One example would be calculating the lexicographic max of an alphanumeric field.</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MapAnything Territory Rollup Value</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Territory Rollup Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>